--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "axios": "^0.27.2",
@@ -50,12 +50,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
-    "eslint": "^8.19.0"
+    "eslint": "^8.19.0",
+    "msw": "^0.46.0"
   }
 }
