--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "eslint": "^8.19.0",
     "msw": "^0.46.0"
   }
